head length estimator in pixels

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "python.analysis.extraPaths": [
         "./face_parsing.PyTorch"
-    ]
+    ],
+    "git.confirmNoVerifyCommit": true,
+    "git.enableSmartCommit": true
 }
